--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
     
     <div class="row justify-content-evenly pt-4 pb-4" style="background-color: #f1f1f1">
         <div class="col-md-5">
-
+          <h3 class="mb-4">Contact Form</h3>
             <form>
                 <div class="mb-3">
                   <label for="name" class="form-label">Full Name</label>
@@ -198,7 +198,11 @@
         </div>
         <div class="col-md-5">
 
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d28939.9171166913!2d66.98943357279589!3d24.949450426751827!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3eb36ae71fc40a31%3A0xcfbb1d61e6ab566d!2sOrangi%20Town%2C%20Karachi%2C%20Karachi%20City%2C%20Sindh%2C%20Pakistan!5e0!3m2!1sen!2s!4v1662102021927!5m2!1sen!2s" width="550" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <h3 class="mb-4">Address</h3>
+            <p>PLOT S-4/44 SEC 11 1/2, SHAH WALIULLAH NA GAR, ORANGI TOWN KARACHI. <br>
+            <i class="bi bi-telephone"></i> Contact: 0346-2206035</p>
+            
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d28939.9171166913!2d66.98943357279589!3d24.949450426751827!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3eb36ae71fc40a31%3A0xcfbb1d61e6ab566d!2sOrangi%20Town%2C%20Karachi%2C%20Karachi%20City%2C%20Sindh%2C%20Pakistan!5e0!3m2!1sen!2s!4v1662102021927!5m2!1sen!2s" style="width: 100%;" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
         </div>
     </div>
@@ -206,7 +210,7 @@
     <!-- FAQ -->
 
     <div class="row justify-content-evenly pt-4 pb-4">
-        <div class="col-10">
+      <div class="col-10 mt-3 mb-5">
         <h3 class="text-center m-3">FAQ</h3>
 
         <div class="accordion accordion-flush border" id="accordionFlushExample">
@@ -245,6 +249,8 @@
 
         </div>
     </div>
+
+    <!-- footer -->
 
     <div class="row justify-content-evenly pb-4 pt-4 bg-dark text-white text-center" >
         <div class="col-md-3 mt-3 mb-3">
