--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
     </div>
     
     <div class="row justify-content-evenly pt-4 pb-4" style="background-color: #f1f1f1">
-        <div class="col-md-5">
+        <div class="col-md-5 mt-3 mb-3">
           <h3 class="mb-4">Contact Form</h3>
             <form>
                 <div class="mb-3">
@@ -196,7 +196,7 @@
               </form>
 
         </div>
-        <div class="col-md-5">
+        <div class="col-md-5  mt-3 mb-3">
 
             <h3 class="mb-4">Address</h3>
             <p>PLOT S-4/44 SEC 11 1/2, SHAH WALIULLAH NA GAR, ORANGI TOWN KARACHI. <br>
